# b64

./: .gitignore  CMakeLists.txt  README.md
include/b64/: b64.h
src/: b64.c  main.c
